# chiacheck

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASING.md  fiber.example.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
chiacheck/: AGENTS.md  Cargo.toml  chiacheck.example.toml
chiacheck/src/: cli.rs  config.rs  db.rs  error.rs  git.rs  lib.rs  main.rs  main_helpers.rs  report.rs
chiacheck/src/metrics/: runner.rs
chiacheck/tests/: integration_test.rs
chiacheck/tests/fixtures/: chiacheck.toml
fiber/: AGENTS.md  Cargo.toml  fiber.example.toml
fiber/src/: cli.rs  config.rs  db.rs  error.rs  git.rs  lib.rs  main.rs  main_helpers.rs  report.rs  scorer.rs
fiber/src/metrics/: ast_type_map.rs  mod.rs  runner.rs
fiber/tests/: integration_test.rs
npm/chiacheck/: README.md  package.json
plans/: 2026-05-13_feat_sqlite-db.md
scripts/: assemble-npm-packages.mjs  publish-npm.sh  release-version.mjs
src/: cli.rs  config.rs  error.rs  git.rs  main.rs  report.rs  scorer.rs
src/metrics/: mod.rs  runner.rs
tests/: integration_test.rs
tests/fixtures/: fiber.toml
xtask/: Cargo.toml
xtask/src/: bench.rs  check_oxc_version.rs  gen_ast_type_map.rs  main.rs  util.rs
