[package]
name = "fiber"
version = "0.1.0"
edition = "2021"
description = "A frontend health score calculator"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
htmlize = "1"

[dev-dependencies]
tempfile = "3"
