[package]
name = "chiacheck"
version = "0.1.1"
edition = "2024"
description = "A frontend health score calculator"
license = "MIT"
repository = "https://github.com/joshcartme/chiacheck"
homepage = "https://github.com/joshcartme/chiacheck"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
htmlize = "1"
oxc_allocator = { version = "0.127", features = ["pool"] }
oxc_parser = "0.127"
oxc_span = "0.127"
oxc_ast = { workspace = true }
oxc_ast_visit = "0.127"
glob = "0.3"
rayon = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2.5.0"

[dev-dependencies]
tempfile = "3"
