[package]
name = "fiber"
version = "0.1.0"
edition = "2024"
description = "A frontend health score calculator"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
htmlize = "1"
oxc_allocator = { version = "0.127", features = ["pool"] }
oxc_parser = "0.127"
oxc_span = "0.127"
oxc_ast = { workspace = true }
oxc_ast_visit = "0.127"
glob = "0.3"
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
